--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,32 @@
 <!--    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+
+    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-junit4 -->
+
+    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-junit5 -->
+
+    <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+    <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-junit5</artifactId>
+      <version>2.17.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-junit4</artifactId>
+      <version>2.17.1</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
@@ -143,9 +169,12 @@
       <artifactId>pact-jvm-consumer-junit</artifactId>
       <version>4.0.10</version>
     </dependency>
-
-
-
+      <dependency>
+          <groupId>dom4j</groupId>
+          <artifactId>dom4j</artifactId>
+          <version>1.1</version>
+          <scope>test</scope>
+      </dependency>
 
 
   </dependencies>
